# telstar

./: LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  test_telstar.py
.circleci/: config.yml
telstar/: __init__.py  admin.py  config.py  consumer.py  producer.py
telstar/com/: __init__.py  pw.py  sqla.py
telstar/peewee/: __init__.py
telstar/tests/: _dbcontent.py  expected.txt  peewee_test_producer.py  sqlalchemy_test_consumer.py  sqlalchemy_test_producer.py  test_consumer.py  test_producer.py  test_telstar.sh
