[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "telstar"
author = "Bitspark"
author-email = "kai.koenig@bitspark.de"
home-page = "https://bitspark.de"
requires = [
    "redis",
    "peewee",
    "marshmallow"
]
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
sqlalchemy = [
    "SQLAlchemy"
]
